openshift-data-science/routes/minio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio
  namespace: redhat-ods-applications
spec:
  port:
    targetPort: 9000
  to:
    kind: Service
    name: minio-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
